<resources>
    <string name="app_name">Stay At</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_label_2">Account</string>
    <string name="text_label_1">Reservations</string>
    <string name="profile">Profile</string>
    <string name="dont_have_account">You don\'t have an account?</string>
    <string name="accommodations">Accommodations</string>
    <string name="someUsername">usernameqm</string>
    <string name="phone">Phone</string>
    <string name="_1_202_555_0157">+1-202-555-0157</string>
    <string name="alex_godfather">Alex Godfather</string>
    <string name="alexqm_email">alexqm@email.com</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="alex">Alex</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="godfather">GodFather</string>
    <string name="account_type">Account Type</string>
    <string name="guest">Guest</string>
    <string name="address">Address</string>
    <string name="despota_stefana_5a">Despota Stefana 5A</string>
    <string name="account_type2">Account Type</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_photo">Change photo</string>
    <string name="submit">Submit</string>
    <string name="hotel_desc">Hotel desc</string>
    <string name="accommodation_more_info">More information</string>
    <string name="filters">Filters</string>
    <string name="category">Category</string>
    <string name="hotel">Hotel</string>
    <string name="apartment">Apartment</string>
    <string name="host">Host</string>
    <string name="sort">Sort</string>
    <string name="petar_perovi">Petar Perović</string>
    <string name="perovic_gmail_com">perovic@gmail.com</string>
    <string name="petar">Petar</string>
    <string name="perovi">Perović</string>
    <string name="city">City</string>
    <string name="number">Number</string>
    <string name="despota_stefana">Despota Stefana</string>
    <string name="novi_sad">Novi Sad</string>
    <string name="old_password">Old Password</string>
    <string name="change">Change</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="country">Country</string>
    <string name="street">Street</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="properties">Properties</string>
    <string name="add_property">Add property</string>
    <string name="availability">Availability</string>
    <string name="auto_approval">Auto approval</string>
    <string name="price_per_guest">Price per guest</string>
    <string name="done">Done</string>
    <string name="my_properties">My properties\n</string>
    <string name="content_description_media">image_description</string>
    <string name="description">Description</string>
    <string name="more_info">More info\n</string>
    <string name="price">Price:</string>
    <string name="active">Active</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="search_address">Search address</string>
    <string name="photos">Photos</string>
    <string name="add_photo">Add photo</string>
    <string name="remove">Remove</string>
    <string name="reservations">Reservations</string>
    <string name="requests">Requests</string>
    <string name="guest_email">Guest Email</string>
    <string name="dates">Dates</string>
    <string name="my_requests">My Requests</string>
    <string name="host_email">Host Email</string>
    <string name="add_your_review">Add your review</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="reviews">Reviews</string>
    <string name="author">Author</string>
    <string name="timestamp">Timestamp</string>
    <string name="review">Review</string>
    <string name="favorite">Favorite</string>
    <string name="type">Type</string>
    <string name="hosted_by">Hosted by:</string>
    <string name="what_this_place_offers">What this place offers:</string>
    <string name="reports">Reports</string>
    <string name="report">Report</string>
    <string name="comment">Comment</string>
    <string name="cancellation_deadline">Cancellation deadline:</string>
    <string name="reserve">Reserve</string>
    <string name="my_reviews">My reviews</string>
    <string name="favorites">Favorites</string>
    <string name="my_reservations">My Reservations</string>
    <string name="new_password">New Password</string>
    <string name="my_notifications">My notifications</string>
    <string name="dismiss">Dismiss</string>

</resources>