<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/icon_nav_2"
        android:title="@string/accommodations"/>
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/text_label_2"/>
    <item
        android:id="@+id/info"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/text_label_2"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/icon_nav"
        android:title="@string/profile"/>
</menu>