<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/review_item_container"
    android:layout_width="250dp"
    android:layout_height="220dp"
    android:layout_margin="10dp"
    android:background="@drawable/border_background"
    android:clickable="false"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/review_author_picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/content_description_media"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_person_24" />

    <Button
        android:id="@+id/review_report"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/report"
        android:visibility="invisible"
        android:textSize="9dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/review_author"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/review_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/timestamp"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/review_rating"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/review_comment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/comment"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/review_author_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/review_rating"
        app:layout_constraintTop_toBottomOf="@+id/review_rating" />

    <TextView
        android:id="@+id/review_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/author"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/review_author_picture"
        app:layout_constraintStart_toEndOf="@+id/review_author_picture"
        app:layout_constraintTop_toTopOf="@+id/review_author_picture" />

    <RatingBar
        android:id="@+id/review_rating"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="@+id/review_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/review_date" />


</androidx.constraintlayout.widget.ConstraintLayout>