<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BlankFragment">
    <ScrollView
        android:id="@+id/scrollView7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/address"
            android:textSize="26dp" />

        <com.google.android.material.textfield.TextInputLayout

            style="?attr/textInputOutlinedStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/search_address"

            app:startIconDrawable="@drawable/baseline_search_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_address"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_country"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/country"
            app:startIconDrawable="@drawable/baseline_flag_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_city"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            app:startIconDrawable="@drawable/baseline_location_city_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_street"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            app:startIconDrawable="@drawable/baseline_share_location_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_number"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            app:startIconDrawable="@drawable/baseline_123_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:text="Next" />
    </LinearLayout>
    </ScrollView>


</FrameLayout>
