<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bookingappteam9.fragments.accommodations.AccommodationsPageFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_products_page" />

    <fragment
        android:id="@+id/navigation_host_profile"
        android:name="com.example.bookingappteam9.fragments.HostProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_host_profile" >
        <action
            android:id="@+id/action_navigation_host_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_guest_profile"
        android:name="com.example.bookingappteam9.fragments.GuestProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_guest_profile" >
        <action
            android:id="@+id/action_navigation_guest_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_host_properties"
        android:name="com.example.bookingappteam9.fragments.HostPropertiesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_host_properties" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.bookingappteam9.fragments.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_editProfileFragment_to_navigation_host_profile"
            app:destination="@id/navigation_host_profile" />
        <action
            android:id="@+id/action_editProfileFragment_to_navigation_guest_profile"
            app:destination="@id/navigation_guest_profile" />
        <action
            android:id="@+id/action_editProfileFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_editProfileFragment_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.example.bookingappteam9.fragments.ChangePasswordFragment"
        android:label="ChangePasswordFragment"
        tools:layout="@layout/fragment_change_password" >
        <action
            android:id="@+id/action_changePasswordFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_admin_accommodations"
        android:name="com.example.bookingappteam9.fragments.AdminAccommodationsFragment"
        android:label="fragment_admin_accommodations"
        tools:layout="@layout/fragment_admin_accommodations" >
        <action
            android:id="@+id/action_navigation_admin_accommodations_self"
            app:destination="@id/navigation_admin_accommodations" />
    </fragment>
</navigation>